website/js/css/custom.css
/* ... */
#filters .form-inline .form-group {
    margin-right: 1em;
}

/* Hide lollipop chart toggle if screen is too small to display chart */
@media only screen and (max-width: 991px) {
    #lollipop-chart-toggle {
        display: none;
    }
}

.checkbox input[type="checkbox"] {
    margin-right: 0.4em;
}

.btm-buffer {
    margin-bottom: 1em;
}

.top-buffer {
    margin-top: 1em;
}

.rgt-buffer {
    margin-right: 1em;
}

#main-grid {
    margin-top: 40px;
}

.superscript {
	font-size: 80%;
	position: relative;
	top: -10px;
}

@keyframes emphasis {
	from {background-color: bisque;}
	to {background-color: white;}
}

th[role='columnheader']:hover .help, .help-target:hover .help {
	visibility: visible;
}

th[role='columnheader'] .help, .help-target .help {
	visibility: hidden;
}

@media (max-width: 1024px) { /* Ensures help icon is always visible on most touchscreen devices */
    th[role='columnheader'] .help, .help-target .help {
        visibility: visible;
    }
}

.markdown img {
	width: 100%
}

.Variant-detail-title {
    margin: 20px;
}

.glyphicon.help {
    margin: 3px;
    cursor: pointer;
    z-index: 10;
}
.sources-fields label {
    width: 7.5em;
}

.avatar {
    width: 120px;
    max-height: 120px;
    object-fit: cover;
}

#enigma-logo {
    height: 100px;
    float: left;
    padding-right: 30px;
}

/**************************************************************/
/**********      Community                *********************/
/**************************************************************/


#communityMap {
    width: 500px;
    height: 250px;
    margin: 20px auto 20px auto;
}

#communityMap .map-info-window div { 
    float: right;
}

#communityMap .map-legend {
    position: relative;
    background-color: white;
    margin-top: 10px;
    margin-right: 10px;
    padding: 8px;
    border-radius: 2px;
    box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
}

#communityMap .map-legend .map-legend-row {
    padding: 4px 0 18px 0;
    margin-left: 15px;
}

#communityMap .map-legend .map-legend-col {
    float: left;
    width: 33.3333333%;
    padding: 0 1px 0 1px;
}

#communityMap .map-legend-col img {
    padding: 1px;
    border-radius: 8px;
    border: 1px solid white;
}

#communityMap .map-legend-col.selected img {
    border: 1px solid black;
}

#communityMap .map-legend-icon {
    height: 20px;
}

#communityMap .map-legend .map-legend-full {
    width: 464px;
}

#communityMap .map-legend .map-legend-slide {
    background-color: white;
    padding: 0;
    border-radius: 2px;
    box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
    position: absolute;
    z-index: 10;
    top: 0px;
    right: 0px;
    max-width: 0;
    max-height: 0;
    overflow: hidden;
    visibility: hidden;
}

#communityMap .map-legend:hover .map-legend-slide {
    max-width: 500px;
    max-height: 500px;
    padding: 8px;
    visibility: visible;
    transition: max-width 0.5s, padding-left 0.5s, padding-right 0.5s;
}

#communityMap .avatar {
    height: 90px;
    width: 90px;
    float: left;
    margin-right: 15px;
    background-color: #f5f5f5;
    border: 1px solid #ddd;
    padding: 4px;
}

.caret {
    border-top: 4px dashed;
}

.slide-fade-in {
    overflow: hidden;
    animation-duration: 1s;
    animation-name: slide-fade-in;
    border-radius: 10px;
}

@keyframes slide-fade-in {
    from {
        max-height: 0px;
        opacity: 0;
    }
    to {
        max-height: 100px;
        opacity: 1;
    }
}

/**************************************************************/
/**********     Versioning                *********************/
/**************************************************************/

.release-notes {
    white-space: pre-line;
}


/* faisal: alternate design for details page */

div.variant-detail-group table.table-bordered {
    border: solid 1px #9a9a9a;
}

div.variant-detail-group table.table-bordered td {
    border: none;
    border-bottom: solid 1px #ccc;
}

div.variant-detail-group table td.help-target {
    font-weight: bold;
    text-align: right;
    text-decoration: dashed;
    width: 200px;
}

div.variant-detail-group .panel table {
    margin-bottom: 10px;
}

span.help-target-inline {
    border-bottom: dotted 1px gray;
    cursor: help;
}

div.variant-detail-group table.table-bordered {
    border-top: solid 5px #777777;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
}

.row-wrap-nowidth {
    word-wrap: break-word;
    float: left;
}

/* hide empty variant information client-side */
div.variant-detail-group .variantfield-empty {
    display: none;
}

div.variant-detail-group .group-empty {
    display: none;
}

/* special panel styling */

.isogrid {
    /* makes isogrid line up with bootstrap's columns; it ordinarily wouldn't due to its gutter option */
    margin-left: -10px;
    margin-right: -10px;
}

div.variant-detail-group .panel {
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
}

div.variant-detail-group .panel-body {
    padding: 0;
    background-color: white;
}

div.variant-details-body {
    margin-top: 2em;
}

/* faisal: hack for packery to minimize the impact of the graphical glitch of opening/closing a section */
.variant-history-col {
    background-color: white;
}

.Variant-detail-headerbar {
    text-align: right;
    vertical-align: bottom;
}

.vcenterblock {
    display: inline-block;
    vertical-align: middle;
    float: none;
}

